# bytecodealliance-registry

./: .gitignore  Cargo.toml  README.md
components/: Cargo.toml  registry.wit
components/checkpoint-module/: Cargo.toml
components/checkpoint-module/src/: lib.rs
components/checkpoints/: Cargo.toml
components/checkpoints/src/: lib.rs
components/checkpoints/wit/: world.wit
components/create-checkpoint/: Cargo.toml
components/create-checkpoint/src/: lib.rs
components/create-checkpoint/wit/: world.wit
components/encoding/: Cargo.toml
components/encoding/src/: lib.rs
components/encoding/wit/: world.wit
components/log-proofs/: Cargo.toml
components/log-proofs/src/: lib.rs
components/log-proofs/wit/: world.wit
components/map-proofs/: Cargo.toml
components/map-proofs/src/: lib.rs
components/map-proofs/wit/: world.wit
components/operator-log/: Cargo.toml
components/operator-log/src/: lib.rs
components/operator-log/wit/: world.wit
components/package-log/: Cargo.toml
components/package-log/src/: lib.rs
components/package-log/wit/: world.wit
crates/api/src/v1/: content.rs  fetch.rs  ledger.rs  mod.rs  monitor.rs  names.rs  package.rs  paths.rs  proof.rs
crates/client/src/: api.rs  config.rs  lib.rs  registry_url.rs  storage.rs
crates/client/src/storage/: fs.rs
crates/crypto/src/hash/: dynamic.rs
crates/protocol/src/: proto_envelope.rs  registry.rs
crates/protocol/src/operator/: mod.rs  state.rs
crates/protocol/src/package/: mod.rs  state.rs
crates/server/: openapi.yaml
crates/server/content/files/: sha256-a78f2209f8c17e588ae92225a4a4303af749d055b529b5fa3ccb326d07369ece
crates/server/src/api/debug/: mod.rs
crates/server/src/api/v1/: content.rs  fetch.rs  ledger.rs  mod.rs  monitor.rs  package.rs  proof.rs
crates/server/src/datastore/: memory.rs  mod.rs
crates/server/src/datastore/postgres/: mod.rs
crates/server/src/services/: core.rs
crates/transparency/src/log/: stack_log.rs
proto/warg/transparency/: proofs.proto
src/: commands.rs
src/commands/: clean.rs  clear.rs  config.rs  download.rs  info.rs  publish.rs  run.rs
tests/: client.rs  server.rs
tests/memory/: mod.rs
tests/postgres/: mod.rs
tests/support/: mod.rs
