[workspace]

members = [
    "checkpoints",
    "checkpoint-module",
    "operator-log",
    "package-log",
    "log-proofs",
]

[workspace.dependencies]
wit-bindgen = { version = "0.8.0", default_features = false }
warg-crypto = { path = "../crates/crypto" }
warg-transparency = { path = "../crates/transparency" }
warg-protocol = { path = "../crates/protocol" }
lazy_static = "1.4.0"
hex = "0.4.3"
semver = { version = "1.0.17", features = ["serde"] }
sync-unsafe-cell = "0.1.1"
