[package]
name = "checkpoint-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { workspace = true }
hex = { workspace = true }
warg-crypto = { workspace = true }
warg-protocol = { workspace = true }
warg-transparency = { workspace = true }

[lib]
crate-type = ["cdylib"]
