[package]
name = "log-proofs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { workspace = true }
lazy_static = { workspace = true }
hex = { workspace = true }
warg-crypto = { workspace = true }
warg-protocol = { workspace = true }
warg-transparency = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "warg:log-proofs"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]
